// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media Asset Page AV player should render version (live audio stream) 1`] = `
<DocumentFragment>
  .c2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c9 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #ECEAE7;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

.c6 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c11 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

.c17 {
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  font-family: inherit;
  font-weight: inherit;
}

.c15 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  padding-bottom: 0.25rem;
}

.c15:last-child {
  padding-bottom: 1rem;
}

.c16 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c18 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c18:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.c18:focus,
.c18:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

.c20 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin-top: 0;
  list-style-type: none;
}

.c20 > li {
  position: relative;
}

.c20 > li::before {
  top: 0.5rem;
  content: ' ';
  position: absolute;
  border-width: 1rem;
  border: 0.1875rem solid #3F3F42;
  border-radius: 50%;
  left: -1rem;
}

.c21 {
  margin-bottom: 1rem;
}

.c19 {
  margin-bottom: 1.5rem;
}

.c5 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.c25 {
  font-size: 0.75rem;
  line-height: 1rem;
  background-color: rgba(34,34,34,0.75);
  text-transform: uppercase;
  color: #FFFFFF;
  padding: 0.25rem 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  position: absolute;
  bottom: 0;
  margin: 0;
  left: 0;
}

.c24 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #ECEAE7;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

.c4 {
  margin-top: 0.5rem;
}

.c4 figure {
  padding-bottom: 1rem;
}

.c12 {
  padding: 0.5rem 0 2rem;
}

.c14 {
  padding-bottom: 1rem;
}

.c1 {
  width: 100%;
  padding-bottom: 1.5rem;
}

.c8 {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
}

.c7 {
  z-index: 1;
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c3 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .c3 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c10 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c10 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c10 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c10 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c10 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .c10 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .c10 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c13 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c13 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c13 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c13 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c13 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .c13 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .c13 {
    display: block;
  }
}

@supports (display:grid) {
  .c22 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c23 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c23 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c23 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c23 {
    width: calc(6/6*(100% - 6 * 1rem) + 5 * 1rem - 0%);
    margin: 0 0.5rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c23 {
    width: calc(6/6*(100% - 6 * 1rem) + 5 * 1rem - 0%);
    margin: 0 0.5rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c23 {
    width: calc(12/12*(100% - 12 * 1rem) + 11 * 1rem - 0%);
    margin: 0 0.5rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c23 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c11 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c11 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c11 {
    padding: 2.5rem 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c15 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c15 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c16 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c16 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c20 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c20 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:25rem) {
  .c4 {
    margin-top: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .c4 {
    padding: 0.5rem 0 0;
    margin-top: 2rem;
  }

  .c4 figure {
    padding-bottom: 1.5rem;
  }
}

@media (min-width:63rem) {
  .c12 {
    padding: 1rem 0 2.5rem;
  }
}

@media (min-width:63rem) {
  .c14 {
    padding-bottom: 1.5rem;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (min-width:63rem) {
  .c1 {
    padding-bottom: 2rem;
  }
}

<div
    id="ContextsContainer"
  >
    <div
      id="PageWrapperContainer"
    >
      <div
        id="LoadingContainer"
      >
        <div
          id="ErrorContainer"
        >
          <div
            id="DataContainer"
          >
            <div>
              chartbeat
            </div>
            <div>
              comscore
            </div>
            <noscript />
            <main
              class="c0 c1"
              dir="ltr"
              role="main"
            >
              <h1
                class="c2"
                id="content"
                tabindex="-1"
              >
                Ўзбек деҳқонининг косаси нега оқармайдиshort
              </h1>
              <div
                class="c3 c4"
                dir="ltr"
              >
                <figure
                  class="c5"
                >
                  <div
                    class="c6"
                  >
                    <iframe
                      allow="autoplay; fullscreen"
                      allowfullscreen=""
                      class="c7"
                      scrolling="no"
                      src="https://test.bbc.com/ws/av-embeds/cps/uzbek/sport-23248721/bbc_world_service_west_africa/uz-Cyrl"
                      title="Медиа плейер"
                    />
                    <div
                      class="c8"
                    >
                      <div
                        class="c9"
                      />
                    </div>
                    <noscript />
                  </div>
                </figure>
              </div>
              <div
                class="c10"
                dir="ltr"
              >
                <strong
                  aria-hidden="true"
                  class="c11 c12"
                >
                  Ўзбек деҳқонининг косаси нега оқармайдиshort
                </strong>
              </div>
              <div
                class="c13 c14"
                dir="ltr"
              >
                <time
                  class="c15"
                  datetime="2019-09-13"
                >
                  13 сентябр 2019
                </time>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  <b>
                    Ўзбек деҳқонининг косаси нега оқармайди
                  </b>
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  <b>
                    Ўзбек деҳқонининг косаси нега оқармайди
                  </b>
                  <b>
                     heading
                  </b>
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  <i
                    class="c17"
                  >
                    <b>
                      Ўзбек деҳқонининг косаси нега оқармайди
                    </b>
                  </i>
                  <i
                    class="c17"
                  >
                    <b>
                       heading
                    </b>
                  </i>
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  <b>
                    Ўзбек деҳқонининг косаси нега оқармайди
                  </b>
                  <b>
                     crosshead 
                  </b>
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  Шу йил апрел ойида Ўзбекистон Президенти Ислом 
                  <a
                    class="c18"
                    href="https://bbc.com/uzbek"
                  >
                    Каримов ўзининг
                  </a>
                   Москвага сафари мобайнида Россияга Туркия каби мамлакатлардан келмай қолган қишлоқ хўжалик маҳсулотлари ўрнини Ўзбекистон қоплаб беришга тайёр эканлигини айтганди.
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  Шу вақтгача ҳам ўзбекистонлик деҳқонлар ўз маҳсулотларини хорижга олиб 
                  <b>
                    чиқишда турли муаммоларга юз тутиб
                  </b>
                   келишган, апрель ойида президент қарори билан "Ўзагроэкспорт" мева-сабзавот маҳсулотларини экспорт қилиш билан шуғулланадиган ташқи савдо компанияси ҳам ташкил қилинди.
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  Ўз мева-сабзавотини Россияга олиб чиқишда бу компания ёрдамига умид қилган боғбонларнинг гилослари бузила бошлагани ҳақидаги хабарлар ҳам тарқалди..
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  Ҳозирда Ўзбекистонда айни пишиқчилик ва етиштирилган маҳсулот учун кенгроқ бозор топиш масаласи яна долзарб турар экан, мамлакат раҳбарининг сўзларидан сўнг вазият нақадар ўзгарган?
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  Би-би-си билан суҳбатда иқтисодий таҳлилчи Анвар Ҳусаиновнинг айтишича, юқори минбардан айтилган сўзларга қарамай, қишлоқ хўжалиги маҳсулотларини хорижга, жумладан Россия бозорига олиб чиқишда ҳануз кўплаб муаммолар мавжуд.
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  "Албатта ўтган йилларга қараганда маҳсулотлар экспорти анча кўпайган. Россиядан юк машиналари келиб, тўғридан-тўғри деҳқонлардан нақд пулга 
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <div
                  class="c19"
                >
                  <ul
                    class="c20"
                    dir="ltr"
                    role="list"
                  >
                    <li
                      class="c21"
                      role="listitem"
                    >
                      Ўзбек деҳқонининг косаси нега оқармайди
                    </li>
                    <li
                      class="c21"
                      role="listitem"
                    >
                      Ўзбек деҳқонининг косаси нега оқармайди
                    </li>
                    <li
                      class="c21"
                      role="listitem"
                    >
                      <b>
                        Ўзбек деҳқонининг косаси нега оқармайди
                      </b>
                    </li>
                    <li
                      class="c21"
                      role="listitem"
                    >
                      Ўзбек деҳқонининг косаси нега оқармайди
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <div
                  class="c19"
                >
                  <ul
                    class="c20"
                    dir="ltr"
                    role="list"
                  >
                    <li
                      class="c21"
                      role="listitem"
                    >
                      <a
                        class="c18"
                        href="https://bbc.com/uzbek"
                      >
                        Ўзбек деҳқонининг косаси нега оқармайди
                      </a>
                    </li>
                    <li
                      class="c21"
                      role="listitem"
                    >
                      <a
                        class="c18"
                        href="https://bbc.com/uzbek"
                      >
                        Ўзбек деҳқонининг косаси нега оқармайди
                      </a>
                    </li>
                    <li
                      class="c21"
                      role="listitem"
                    >
                      <a
                        class="c18"
                        href="https://bbc.com/uzbek"
                      >
                        Ўзбек деҳқонининг косаси нега оқармайди
                      </a>
                    </li>
                    <li
                      class="c21"
                      role="listitem"
                    >
                      <a
                        class="c18"
                        href="https://bbc.com/uzbek"
                      >
                        Ўзбек деҳқонининг косаси нега оқармайди
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="c3"
                dir="ltr"
              >
                <figure
                  class="c5"
                >
                  <div
                    class="c22"
                    dir="ltr"
                  >
                    <div
                      class="c23"
                      dir="ltr"
                    >
                      <div
                        class="c24"
                      >
                        <div
                          class="lazyload-wrapper"
                        >
                          <div
                            class="lazyload-placeholder"
                          />
                        </div>
                        <noscript />
                        <p
                          class="c25"
                          role="text"
                        >
                          <span
                            class="c2"
                          >
                            Сурат манбаси, 
                          </span>
                          <span
                            lang="en-GB"
                          >
                            AFP
                          </span>
                        </p>
                      </div>
                    </div>
                  </div>
                </figure>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  Ўзбек деҳқонининг косаси нега оқармайди transmission info 
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  Ўзбек деҳқонининг косаси нега оқармайди footer 
                </p>
              </div>
            </main>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Media Asset Page should render component 1`] = `
<DocumentFragment>
  .c54 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

.c53 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 1rem;
  height: 0.8125rem;
}

.c2 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c9 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #ECEAE7;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

.c6 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c11 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

.c17 {
  font-size: 1.25rem;
  line-height: 1.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  margin: 0;
  padding: 1.5rem 0;
}

.c22 {
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  font-family: inherit;
  font-weight: inherit;
}

.c15 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  padding-bottom: 0.25rem;
}

.c15:last-child {
  padding-bottom: 1rem;
}

.c50 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c16 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c21 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c21:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.c21:focus,
.c21:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

.c19 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  margin-top: 0;
  list-style-type: none;
}

.c19 > li {
  position: relative;
}

.c19 > li::before {
  top: 0.5rem;
  content: ' ';
  position: absolute;
  border-width: 1rem;
  border: 0.1875rem solid #3F3F42;
  border-radius: 50%;
  left: -1rem;
}

.c20 {
  margin-bottom: 1rem;
}

.c18 {
  margin-bottom: 1.5rem;
}

.c5 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.c26 {
  font-size: 0.75rem;
  line-height: 1rem;
  background-color: rgba(34,34,34,0.75);
  text-transform: uppercase;
  color: #FFFFFF;
  padding: 0.25rem 0.5rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  position: absolute;
  bottom: 0;
  margin: 0;
  left: 0;
}

.c28 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  color: #6E6E73;
  padding: 0.5rem 0.5rem 0;
  width: 100%;
}

.c28 > p {
  padding-bottom: 1.5rem;
  margin: 0;
}

.c28 > p:last-child {
  padding-bottom: 0;
}

.c28 i {
  font-style: normal;
}

.c25 {
  position: relative;
  height: 0;
  overflow: hidden;
  background-color: #ECEAE7;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 30%;
  padding-bottom: 56.25%;
  width: 100%;
  background-image: url(data:image/svg+xml;base64,PD94bWwgdmVyc2lvbj0iMS4wIiBlbmNvZGluZz0iVVRGLTgiPz48c3ZnIHdpZHRoPSI0NzkiIGhlaWdodD0iMTM2IiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxnIGZpbGw9Im5vbmUiIGZpbGwtcnVsZT0iZXZlbm9kZCI+PGcgZmlsbD0iI0Q1RDBDRCI+PGc+PHBhdGggZD0iTTQ0OS41NTYgOTEuNTUzbC0yLjMxIDEuNDFjLTExLjE2NyA2LjgxOC0yMy4zMTMgMTAuNDc0LTM0LjM0NiAxMC40Ny0yMy42MS0uMDktMzkuMTYzLTE0LjA4My0zOS4yMjctMzQuNDUzLjAzLTE5LjkxOCAxNi4yNy0zNC42NjMgMzguNjMzLTM0LjcxOCAxMS4zODcuMDEgMjEuNzAzIDIuOTU0IDMzLjk2MiA5LjY3MmwyLjI1MSAxLjI0di0xOC4xOWwtLjk2Mi0uMzc3Yy0xMy44MjQtNS40NTgtMjQuNTMtNy44OS0zNS4xMDMtNy44ODQtMTYuMzQ2LS4wMDYtMzAuNTMzIDUuMzk0LTQwLjYzNyAxNC41NTctMTAuMTA1IDkuMTYzLTE2LjEwNiAyMi4xMDItMTYuMDk5IDM2Ljk1My4wMDggMTAuMzQ4IDQuMjc5IDIyLjQ4IDEzLjQyIDMyLjEwNSA5LjEyMSA5LjYyOCAyMy4xNjUgMTYuNjQ4IDQyLjQzIDE2LjYzOWguMDYzYzE1Ljk4IDAgMjcuMDYyLTMuNTYzIDM3LjA3NC04LjQ5MmwuODUxLS40MTRWOTEuNTUzek0zMzQgMTM1LjY5N2gxNDQuMTk1VjBIMzM0djEzNS42OTd6Ii8+PHBhdGggZD0iTTI3Ni45MzcgODkuOTY4Yy4wNDEtMTIuMzMtOC4xNzEtMjEuNjk2LTIxLjMwOC0yNS4zIDMuNTQ0LTEuODA5IDYuMzUtNC4wMjMgOC40MDQtNi43MjcgMi43NS0zLjYyMiA0LjA2MS04LjA2NCA0LjA0Ni0xMy4yMzUuMDE1LTYuMzU5LTIuNDg2LTEyLjgzOS03Ljg1OC0xNy42ODctNS4zNzItNC44NDctMTMuNTI2LTcuOTk3LTI0LjY1NC03Ljk5MUgyMDQuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMTY3IDEzNS42OThoMTQ0LjE5N1YwSDE2N3YxMzUuNjk3eiIvPjxwYXRoIGQ9Ik0xMDkuOTM3IDg5Ljk2OGMuMDQxLTEyLjMzLTguMTcxLTIxLjY5Ni0yMS4zMDgtMjUuMyAzLjU0NC0xLjgwOSA2LjM1LTQuMDIzIDguNDA0LTYuNzI3IDIuNzUtMy42MjIgNC4wNjEtOC4wNjQgNC4wNDYtMTMuMjM1LjAxNS02LjM1OS0yLjQ4Ni0xMi44MzktNy44NTgtMTcuNjg3LTUuMzcyLTQuODQ3LTEzLjUyNi03Ljk5Ny0yNC42NTQtNy45OTFIMzcuODN2OTcuNzI4aDM2LjA3M2MxMi44NyAwIDIxLjkwNi0zLjQ4MiAyNy43MjItOC42NSA1LjgxOC01LjE1NSA4LjMyLTExLjkxIDguMzEyLTE4LjEzOHpNMCAxMzUuNjk4aDE0NC4xOTdWMEgwdjEzNS42OTd6Ii8+PHBhdGggZD0iTTI1OC42NjIgODguMTk4Yy0uMDEzIDMuMjI5LTEuMDA3IDYuNDc1LTMuODk2IDkuMDExLTIuODg0IDIuNTM3LTcuODczIDQuNDYzLTE2LjEzMyA0LjQ2M0gyMjJWNzVoMTUuODkzYzcuNDExIDAgMTIuNjcgMS41MDIgMTUuOTY1IDMuODUgMy4yODkgMi4zNjIgNC43NzYgNS40NjMgNC44MDQgOS4zNDgiLz48cGF0aCBkPSJNOTEuNjYyIDg4LjE5OGMtLjAxMyAzLjIyOS0xLjAwNyA2LjQ3NS0zLjg5NiA5LjAxMS0yLjg4NCAyLjUzNy03Ljg3NCA0LjQ2My0xNi4xMzMgNC40NjNINTVWNzVoMTUuODkyYzcuNDEyIDAgMTIuNjcyIDEuNTAyIDE1Ljk2NiAzLjg1IDMuMjg5IDIuMzYyIDQuNzc2IDUuNDYzIDQuODA0IDkuMzQ4Ii8+PHBhdGggZD0iTTI0NS4xODYgNTUuNzljMy4wOTYtMi4yMzcgNC41OS01LjM4NiA0LjYxMy0xMC4xMjQtLjAxNS0zLjI1LS45NDMtNi4wMzMtMy4yODEtOC4xMTEtMi4zNDYtMi4wNzgtNi4zMy0zLjU1NS0xMi43NTQtMy41NTVIMjIydjI1LjI3NWg4LjA3NmM2Ljk4OC4wMDQgMTEuOTk4LTEuMjQzIDE1LjExLTMuNDg2Ii8+PHBhdGggZD0iTTc4LjE4NiA1NS43OWMzLjA5Ni0yLjIzNyA0LjU5LTUuMzg2IDQuNjEzLTEwLjEyNC0uMDE1LTMuMjUtLjk0My02LjAzMy0zLjI4Mi04LjExMUM3Ny4xNzIgMzUuNDc3IDczLjE4OCAzNCA2Ni43NjQgMzRINTV2MjUuMjc1aDguMDc2YzYuOTg4LjAwNCAxMS45OTgtMS4yNDMgMTUuMTEtMy40ODYiLz48L2c+PC9nPjwvZz48L3N2Zz4K);
}

.c4 {
  margin-top: 0.5rem;
}

.c4 figure {
  padding-bottom: 1rem;
}

.c35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 2.75rem;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c37 {
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  background-color: #FDFDFD;
  margin: 1rem 0;
  padding-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c33 {
  border-top: 0.0625rem solid #AEAEB5;
  z-index: -1;
}

.c31 {
  position: relative;
  z-index: 0;
  color: #3F3F42;
  margin-top: 2rem;
}

.c34 {
  margin: 0;
  padding: 0;
}

.c30 {
  margin-bottom: 1rem;
  padding-bottom: 2rem;
}

.c32 {
  margin-top: 0;
}

.c44 {
  display: inline-block;
  vertical-align: top;
  position: relative;
  width: 33.33%;
}

.c47 {
  display: inline-block;
  vertical-align: top;
  width: 66.67%;
  padding: 0 0.5rem;
}

.c42 {
  position: relative;
}

.c45 {
  position: relative;
}

.c46 > * {
  height: 2rem;
  padding: 0.5rem 0.25rem;
}

.c51 {
  color: #222222;
  background-color: #FFFFFF;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  display: block;
}

.c52 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c55 {
  padding: 0 0.25rem;
}

.c40 {
  padding: 0.5rem 0 1rem;
}

.c40:last-child {
  border: none;
}

.c40:first-child {
  padding-top: 0;
}

.c40:last-child {
  padding-bottom: 0;
}

.c38 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c12 {
  padding: 0.5rem 0 2rem;
}

.c14 {
  padding-bottom: 1rem;
}

.c1 {
  width: 100%;
  padding-bottom: 1.5rem;
}

.c8 {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
}

.c7 {
  z-index: 1;
  border: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c48 {
  color: #222222;
  margin: 0;
  padding-bottom: 0.5rem;
  font-family: Helmet,Freesans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

.c49 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow-wrap: break-word;
  overflow-wrap: anywhere;
}

.c49:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c49:hover,
.c49:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c49:visited {
  color: #6E6E73;
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c3 {
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c3 {
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c3 {
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c3 {
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c3 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .c3 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .c3 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c10 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c10 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c10 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c10 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c10 {
    margin-left: 16.666666666666668%;
  }
}

@media (min-width:80rem) {
  .c10 {
    margin-left: 33.333333333333336%;
  }
}

@supports (display:grid) {
  .c10 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c13 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c13 {
    padding: 0 0.5rem;
    margin-left: 0%;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c13 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c13 {
    padding: 0 1rem;
    margin-left: 0%;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c13 {
    margin-left: 20%;
  }
}

@media (min-width:80rem) {
  .c13 {
    margin-left: 40%;
  }
}

@supports (display:grid) {
  .c13 {
    display: block;
  }
}

@supports (display:grid) {
  .c23 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c24 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c24 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c24 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c24 {
    width: calc(6/6*(100% - 6 * 1rem) + 5 * 1rem - 0%);
    margin: 0 0.5rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c24 {
    width: calc(6/6*(100% - 6 * 1rem) + 5 * 1rem - 0%);
    margin: 0 0.5rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c24 {
    width: calc(12/12*(100% - 12 * 1rem) + 11 * 1rem - 0%);
    margin: 0 0.5rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c24 {
    display: block;
  }
}

@media (max-width:14.9375rem) {
  .c27 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c27 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c27 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c27 {
    width: calc(5/6*(100% - 6 * 1rem) + 4 * 1rem );
    margin: 0 0.5rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c27 {
    width: calc(5/6*(100% - 6 * 1rem) + 4 * 1rem );
    margin: 0 0.5rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c27 {
    width: calc(10/12*(100% - 12 * 1rem) + 9 * 1rem );
    margin: 0 0.5rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c27 {
    display: block;
  }
}

@supports (display:grid) {
  .c39 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c41 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c41 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c41 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c41 {
    width: calc(6/6*(100% - 6 * 1rem) + 5 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c41 {
    width: calc(8/8*(100% - 8 * 1rem) + 7 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c41 {
    width: calc(8/8*(100% - 8 * 1rem) + 7 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c41 {
    display: block;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c29 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c29 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c11 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c11 {
    font-size: 2.75rem;
    line-height: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c11 {
    padding: 2.5rem 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c17 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c17 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c17 {
    padding-top: 2rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c15 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c15 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c50 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c50 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c16 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c16 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c19 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c19 {
    font-size: 1rem;
    line-height: 1.375rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c28 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c28 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c28 {
    padding: 0.5rem 1rem 0;
  }
}

@media (min-width:63rem) {
  .c28 {
    padding: 0.5rem 0 0;
  }
}

@media (min-width:25rem) {
  .c4 {
    margin-top: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .c4 {
    padding: 0.5rem 0 0;
    margin-top: 2rem;
  }

  .c4 figure {
    padding-bottom: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c36 {
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c37 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c37 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c37 {
    margin: 0;
  }
}

@media (min-width:37.5rem) {
  .c37 {
    padding-right: 1rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c33 {
    border-color: windowText;
  }
}

@media (min-width:37.5rem) {
  .c33 {
    position: absolute;
    left: 0;
    right: 0;
    top: 1.375rem;
  }
}

@media (min-width:37.5rem) {
  .c31 {
    margin-top: 1.5rem;
  }
}

@media (min-width:63rem) {
  .c31 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c30 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width:63rem) {
  .c44 {
    display: block;
    width: 100%;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c44 {
    width: initial;
    grid-column: 1 / span 2;
  }
}

@media (min-width:37.5rem) {
  .c47 {
    padding: 0 1rem;
  }
}

@media (min-width:63rem) {
  .c47 {
    display: block;
    width: 100%;
    padding: 0.5rem 0;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c47 {
    display: block;
    width: initial;
    padding: initial;
    grid-column: 3 / span 4;
  }
}

@supports (grid-template-columns:fit-content(200px)) {
  .c42 {
    display: grid;
    grid-template-columns: repeat(6,1fr);
    grid-column-gap: 0.5rem;
  }
}

@media (min-width:25rem) {
  .c46 {
    position: absolute;
    bottom: 0;
  }
}

@media (max-width:24.9375rem) {
  .c46 > * {
    height: 1.25rem;
    padding: 0.25rem 0.25rem 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c51 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c51 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:63rem) {
  .c43 {
    display: grid;
  }
}

@media (max-width:62.9375rem) {
  .c40 {
    border-bottom: 0.0625rem solid #F2F2F2;
  }
}

@media (min-width:37.5rem) {
  .c40 {
    padding: 1rem 0 1rem;
  }
}

@media (min-width:63rem) {
  .c40 {
    padding: 0 0 1.5rem;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c40:first-child {
    padding-top: 1rem;
  }
}

@media (min-width:63rem) {
  .c40 {
    border-bottom: 0.0625rem solid #F2F2F2;
    padding: 1rem 0 1rem;
  }
}

@media (min-width:63rem) {
  .c12 {
    padding: 1rem 0 2.5rem;
  }
}

@media (min-width:63rem) {
  .c14 {
    padding-bottom: 1.5rem;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

@media (min-width:63rem) {
  .c1 {
    padding-bottom: 2rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c48 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c48 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

<div
    id="ContextsContainer"
  >
    <div
      id="PageWrapperContainer"
    >
      <div
        id="LoadingContainer"
      >
        <div
          id="ErrorContainer"
        >
          <div
            id="DataContainer"
          >
            <div>
              chartbeat
            </div>
            <div>
              comscore
            </div>
            <noscript />
            <main
              class="c0 c1"
              dir="ltr"
              role="main"
            >
              <h1
                class="c2"
                id="content"
                tabindex="-1"
              >
                Simorgh: Media Pod Build First CPS Media Asset Page in Simorgh & &lt; &gt;
              </h1>
              <div
                class="c3 c4"
                dir="ltr"
              >
                <figure
                  class="c5"
                >
                  <div
                    class="c6"
                  >
                    <iframe
                      allow="autoplay; fullscreen"
                      allowfullscreen=""
                      class="c7"
                      scrolling="no"
                      src="https://test.bbc.com/ws/av-embeds/cps/pidgin/23248703/p01kx42v/pcm"
                      title="Media player"
                    />
                    <div
                      class="c8"
                    >
                      <div
                        class="c9"
                      />
                    </div>
                    <noscript />
                  </div>
                </figure>
              </div>
              <div
                class="c10"
                dir="ltr"
              >
                <strong
                  aria-hidden="true"
                  class="c11 c12"
                >
                  Simorgh: Media Pod Build First CPS Media Asset Page in Simorgh & &lt; &gt;
                </strong>
              </div>
              <div
                class="c13 c14"
                dir="ltr"
              >
                <time
                  class="c15"
                  datetime="2019-09-13"
                >
                  13 September 2019
                </time>
                <div>
                  <time
                    class="c15"
                    datetime="2019-11-20"
                  >
                    New Informate 20 November 2019
                  </time>
                </div>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  <b>
                    This is an introduction in bold. & &lt; &gt;
                  </b>
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <h2
                  class="c17"
                  id="This-is-a-heading-<->"
                  tabindex="-1"
                >
                  This is a heading & &lt; &gt;
                </h2>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <h2
                  class="c17"
                  id="This-is-a-subheading-<->"
                  tabindex="-1"
                >
                  This is a subheading & &lt; &gt;
                </h2>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <h2
                  class="c17"
                  id="This-is-a-crosshead-<->"
                  tabindex="-1"
                >
                  This is a crosshead & &lt; &gt;
                </h2>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  This is regular paragraph text. "Lorem ipsum dolor sit amet", consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  Bulleted list:
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <div
                  class="c18"
                >
                  <ul
                    class="c19"
                    dir="ltr"
                    role="list"
                  >
                    <li
                      class="c20"
                      role="listitem"
                    >
                      <a
                        class="c21"
                        href="http://www.bbc.com/afrique/23248423"
                      >
                        &lt;Media Asset Page&gt;
                      </a>
                    </li>
                    <li
                      class="c20"
                      role="listitem"
                    >
                      <a
                        class="c21"
                        href="http://www.bbc.com/afrique/23248423"
                      >
                        &lt;Media Asset Page&gt;
                      </a>
                    </li>
                    <li
                      class="c20"
                      role="listitem"
                    >
                      <a
                        class="c21"
                        href="http://www.bbc.com/afrique/23248423"
                      >
                        &lt;Media Asset Page&gt;
                      </a>
                    </li>
                    <li
                      class="c20"
                      role="listitem"
                    >
                      <a
                        class="c21"
                        href="https://bbc.com/pidgin"
                      >
                        this is the link text
                      </a>
                    </li>
                    <li
                      class="c20"
                      role="listitem"
                    >
                      <a
                        class="c21"
                        href="https://bbc.com/pidgin"
                      >
                        this is the link text
                      </a>
                    </li>
                    <li
                      class="c20"
                      role="listitem"
                    >
                      <a
                        class="c21"
                        href="https://bbc.com/pidgin"
                      >
                        this is the link text
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  Numbered list:
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <div
                  class="c18"
                >
                  <ul
                    class="c19"
                    dir="ltr"
                    role="list"
                  >
                    <li
                      class="c20"
                      role="listitem"
                    >
                      <a
                        class="c21"
                        href="http://www.bbc.com/afrique/23248423"
                      >
                        &lt;Media Asset Page&gt;
                      </a>
                    </li>
                    <li
                      class="c20"
                      role="listitem"
                    >
                      <a
                        class="c21"
                        href="http://www.bbc.com/afrique/23248423"
                      >
                        &lt;Media Asset Page&gt;
                      </a>
                    </li>
                    <li
                      class="c20"
                      role="listitem"
                    >
                      <a
                        class="c21"
                        href="http://www.bbc.com/afrique/23248423"
                      >
                        &lt;Media Asset Page&gt;
                      </a>
                    </li>
                    <li
                      class="c20"
                      role="listitem"
                    >
                      <a
                        class="c21"
                        href="https://bbc.com/pidgin"
                      >
                        this is the link text
                      </a>
                    </li>
                    <li
                      class="c20"
                      role="listitem"
                    >
                      <a
                        class="c21"
                        href="https://bbc.com/pidgin"
                      >
                        this is the link text
                      </a>
                    </li>
                    <li
                      class="c20"
                      role="listitem"
                    >
                      <a
                        class="c21"
                        href="https://bbc.com/pidgin"
                      >
                        this is the link text
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  Lorem ipsum dolor sit amet, 
                  <b>
                    consectetur
                  </b>
                   adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                  <b>
                     ullamco laboris nisi ut aliquip 
                  </b>
                  ex ea commodo consequat. Duis aute irure dolor in reprehenderit
                  <i
                    class="c22"
                  >
                     in voluptate velit esse cillum 
                  </i>
                  dolore "eu fugiat nulla" pariatur. 
                  <a
                    class="c21"
                    href="https://bbc.com/pidgin"
                  >
                    Excepteur
                  </a>
                   sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  Testing special characters: !"£$%^&*()_+=-{}[]:@~;'#&lt;&gt;?,./\\\`\\# 7.7 E 2₉₈₇₆₅₄₃₂₁₀⁹⁸⁷⁶⁵⁴³²¹⁰ⁿ☆★ŷŶŵŴÿþýüûúùø÷öõôóòñðïîíìëêéèçæåäãâáßÞÝÜÛÚÙØ×ÖÕÔÓÒÑÐÏÎÍÌËÊÉÈ
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  ÇÆÆÅÄÃÂÁÀ¿¾½¼»º¸·¶µ´±°¯®¬«ª©¨§¦¥¤£¢¡ ~#
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  Table:
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  Social media embed:
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  Quote box:
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  Correspondent quote box:
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  Fact box:
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  ­
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  Lorem ipsum
                  <a
                    class="c21"
                    href="https://bbc.com/pidgin"
                  >
                     dolor sit amet
                  </a>
                  , consectetur adipiscing elit
                </p>
              </div>
              <div
                class="c3"
                dir="ltr"
              >
                <figure
                  class="c5"
                >
                  <div
                    class="c23"
                    dir="ltr"
                  >
                    <div
                      class="c24"
                      dir="ltr"
                    >
                      <div
                        class="c25"
                      >
                        <div
                          class="lazyload-wrapper"
                        >
                          <div
                            class="lazyload-placeholder"
                          />
                        </div>
                        <noscript />
                        <p
                          class="c26"
                          role="text"
                        >
                          <span
                            class="c2"
                          >
                            Wia dis foto come from, 
                          </span>
                          <span
                            lang="en-GB"
                          >
                            Google
                          </span>
                        </p>
                      </div>
                    </div>
                    <div
                      class="c27"
                      dir="ltr"
                    >
                      <figcaption
                        class="c28"
                      >
                        <span
                          class="c2"
                        >
                          Wetin we call dis foto, 
                        </span>
                        <p>
                          Psammead was named after the mythical sand creature
                        </p>
                      </figcaption>
                    </div>
                  </div>
                </figure>
              </div>
              <div
                class="c3"
                dir="ltr"
              >
                <figure
                  class="c5"
                >
                  <div
                    class="c23"
                    dir="ltr"
                  >
                    <div
                      class="c24"
                      dir="ltr"
                    >
                      <div
                        class="c25"
                      >
                        <div
                          class="lazyload-wrapper"
                        >
                          <div
                            class="lazyload-placeholder"
                          />
                        </div>
                        <noscript />
                        <p
                          class="c26"
                          role="text"
                        >
                          <span
                            class="c2"
                          >
                            Wia dis foto come from, 
                          </span>
                          <span
                            lang="en-GB"
                          >
                            Butterfly person
                          </span>
                        </p>
                      </div>
                    </div>
                    <div
                      class="c27"
                      dir="ltr"
                    >
                      <figcaption
                        class="c28"
                      >
                        <span
                          class="c2"
                        >
                          Wetin we call dis foto, 
                        </span>
                        <p>
                          A pretty little butterfly & &lt; &gt;
                        </p>
                      </figcaption>
                    </div>
                  </div>
                </figure>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <div
                  class="c18"
                >
                  <ul
                    class="c19"
                    dir="ltr"
                    role="list"
                  >
                    <li
                      class="c20"
                      role="listitem"
                    >
                      sunt in culpa qui officia deserunt mollit anim id est laborum
                    </li>
                    <li
                      class="c20"
                      role="listitem"
                    >
                      sunt in culpa qui officia deserunt mollit anim id est laborum
                    </li>
                    <li
                      class="c20"
                      role="listitem"
                    >
                      sunt in culpa qui officia deserunt mollit anim id est laborum
                    </li>
                    <li
                      class="c20"
                      role="listitem"
                    >
                      v3 draft
                    </li>
                  </ul>
                </div>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  This is transmission info 
                </p>
              </div>
              <div
                class="c13"
                dir="ltr"
              >
                <p
                  class="c16"
                >
                  This is the footer 
                </p>
              </div>
            </main>
            <section
              aria-labelledby="related-content-heading"
              class="c0 c29"
              data-e2e="related-content-heading"
              dir="ltr"
              role="region"
            >
              <div
                class="c10 c30"
                dir="ltr"
              >
                <div
                  class="c31 c32"
                >
                  <div
                    class="c33"
                  />
                  <h2
                    class="c34"
                  >
                    <span
                      class="c35"
                    >
                      <span
                        class="c36"
                      >
                        <span
                          class="c37"
                          dir="ltr"
                          id="related-content-heading"
                        >
                          Another thing we de for inside dis tori
                        </span>
                      </span>
                    </span>
                  </h2>
                </div>
                <ol
                  class="c38 c39"
                  dir="ltr"
                  role="list"
                >
                  <li
                    class="c40 c41"
                    dir="ltr"
                    role="listitem"
                  >
                    <div
                      class="c42 c43"
                      data-e2e="story-promo"
                    >
                      <div
                        class="c44"
                        dir="ltr"
                      >
                        <div
                          class="c45"
                        >
                          <div
                            class="c25"
                          >
                            <div
                              class="lazyload-wrapper"
                            >
                              <div
                                class="lazyload-placeholder"
                              />
                            </div>
                          </div>
                          <div
                            class="c46"
                          />
                        </div>
                      </div>
                      <div
                        class="c47"
                        dir="ltr"
                      >
                        <h3
                          class="c48"
                        >
                          <a
                            class="c49"
                            href="/pidgin/tori-23145776"
                          >
                            Police Arrest 3 ontop Anambra Church Attack
                          </a>
                        </h3>
                        <time
                          class="c50"
                          datetime="2017-08-08"
                        >
                          8th August 2017
                        </time>
                      </div>
                    </div>
                  </li>
                  <li
                    class="c40 c41"
                    dir="ltr"
                    role="listitem"
                  >
                    <div
                      class="c42 c43"
                      data-e2e="story-promo"
                    >
                      <div
                        class="c44"
                        dir="ltr"
                      >
                        <div
                          class="c45"
                        >
                          <div
                            class="c25"
                          >
                            <div
                              class="lazyload-wrapper"
                            >
                              <div
                                class="lazyload-placeholder"
                              />
                            </div>
                          </div>
                          <div
                            class="c46"
                          />
                        </div>
                      </div>
                      <div
                        class="c47"
                        dir="ltr"
                      >
                        <h3
                          class="c48"
                        >
                          <a
                            class="c49"
                            href="/pidgin/tori-23143754"
                          >
                            Lagos 'Gay' men Appear for Court, say Dem no dey Guilty
                          </a>
                        </h3>
                        <time
                          class="c50"
                          datetime="2017-08-08"
                        >
                          8th August 2017
                        </time>
                      </div>
                    </div>
                  </li>
                  <li
                    class="c40 c41"
                    dir="ltr"
                    role="listitem"
                  >
                    <div
                      class="c42 c43"
                      data-e2e="story-promo"
                    >
                      <div
                        class="c44"
                        dir="ltr"
                      >
                        <div
                          class="c45"
                        >
                          <div
                            class="c9"
                          />
                          <div
                            class="c46"
                          >
                            <div
                              aria-hidden="true"
                              class="c51"
                              dir="ltr"
                            >
                              <div
                                class="c52"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="c53"
                                  focusable="false"
                                  height="13px"
                                  viewBox="0 0 32 26"
                                  width="16px"
                                >
                                  <path
                                    d="M9,2V0H4V2H0V26H32V2ZM6.5,10A2.5,2.5,0,1,1,9,7.52,2.5,2.5,0,0,1,6.5,10ZM20,23a9,9,0,1,1,9-9A9,9,0,0,1,20,23Z"
                                  />
                                  <circle
                                    cx="20"
                                    cy="14.02"
                                    r="5.5"
                                  />
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="c47"
                        dir="ltr"
                      >
                        <h3
                          class="c48"
                        >
                          <a
                            class="c49"
                            href="/pidgin/23146654"
                          >
                            <span
                              role="text"
                            >
                              <span
                                class="c2"
                              >
                                Image gallery, 
                              </span>
                              <span>
                                Kenya Elections Pictures: 8 August 2017
                              </span>
                            </span>
                          </a>
                        </h3>
                        <time
                          class="c50"
                          datetime="2017-08-08"
                        >
                          8th August 2017
                        </time>
                      </div>
                    </div>
                  </li>
                  <li
                    class="c40 c41"
                    dir="ltr"
                    role="listitem"
                  >
                    <div
                      class="c42 c43"
                      data-e2e="story-promo"
                    >
                      <div
                        class="c44"
                        dir="ltr"
                      >
                        <div
                          class="c45"
                        >
                          <div
                            class="c25"
                          >
                            <div
                              class="lazyload-wrapper"
                            >
                              <div
                                class="lazyload-placeholder"
                              />
                            </div>
                          </div>
                          <div
                            class="c46"
                          >
                            <div
                              aria-hidden="true"
                              class="c51"
                              dir="ltr"
                            >
                              <div
                                class="c52"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="c54"
                                  focusable="false"
                                  height="12px"
                                  viewBox="0 0 13 12"
                                  width="13px"
                                >
                                  <path
                                    d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
                                  />
                                  <path
                                    d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
                                  />
                                </svg>
                                <time
                                  class="c55"
                                  datetime="PT15S"
                                >
                                  0:15
                                </time>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="c47"
                        dir="ltr"
                      >
                        <h3
                          class="c48"
                        >
                          <a
                            class="c49"
                            href="/pidgin/media-23147054"
                          >
                            <span
                              role="text"
                            >
                              <span
                                class="c2"
                              >
                                Make you listen, 
                              </span>
                              <span>
                                BBC News Pidgin One Minute News
                              </span>
                              <span
                                class="c2"
                              >
                                , Duration 0,15
                              </span>
                            </span>
                          </a>
                        </h3>
                        <time
                          class="c50"
                          datetime="2017-08-17"
                        >
                          17th August 2017
                        </time>
                      </div>
                    </div>
                  </li>
                </ol>
              </div>
            </section>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
